# BuutcampOthello

./: CMakeLists.txt  Document_AI_OthelloGame.docx  Meetings  Meetings.md  README.md  ai.cpp  ai.h  othello_heuristic.c
src/: ai.cpp  ai.h  board.cpp  board.h  client.c  client.cpp  client.h  definet.h  main.cpp  othello.cpp  othello.h  player.cpp  player.h  server.c  server.cpp  server.h
